update element tag for job position; fix spacing for secondary job labels

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
 
 .job-labels-secondary li {
   float: left;
-  padding-right: 15px;
+  padding-right: 25px;
 }
 
 .job-post-date {
